<resources>
    <string name="app_name">Waves block explorer</string>
    <string name="blockNTransaction">Block %d contains %d transactions</string>
    <string name="signature">Signature: %1$s</string>
    <string name="date">%1$s</string>
    <string name="block_height">Height: %1$s</string>
    <string name="block_version">Version: %1$s</string>
    <string name="block_timestamp">Timestamp: %1$s</string>
    <string name="block_transactions">Transactions: %1$s</string>
    <string name="block_parent_block">Parent block: %1$s</string>
    <string name="block_generator">Generator: %1$s</string>
    <string name="block_signature">Signature: %1$s</string>
    <string name="block_size">Size: %1$s</string>
    <string name="block_total_fee">Total Fee: %1$s</string>
    <string name="block_reward">Reward: %1$s</string>
    <string name="loading">Loading...</string>
</resources>
